# telecodex

./: .gitignore  Cargo.toml  README.md  README.ru.md  telecodex.toml.example
src/: app.rs  codex.rs  codex_history.rs  commands.rs  limits.rs  models.rs  store.rs  telegram.rs  transcribe.rs
src/app/: forum.rs  io.rs  presentation.rs  support.rs  tests.rs  turns.rs
