[package]
name = "telecodex"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
build = "build.rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Headcrab/telecodex"
description = "Telegram bridge for a local Codex CLI instance"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
html-escape = "0.2.13"
regex = "1.11.1"
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "json", "multipart", "rustls-tls", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
toml = "0.9.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v5", "v7"] }
